--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "canvas": "^2.8.0",
     "discord-api-types": "^0.25.2",
     "discord.js": "^13.3.1",
-    "dotenv": "^10.0.0"
+    "dotenv": "^10.0.0",
+    "quick.db": "^7.1.3"
   }
 }
