feat: :zap: Ajout d'une 3ème option pour la commande ``/poll`` !

--- a/Utils/Data/config.json
+++ b/Utils/Data/config.json
@@ -8,7 +8,8 @@
             "suggests": "925757934972047360",
             "starboard": "922545697113407518",
             "welcome": "834780676166516836",
-            "reglement": "922813007963254825"
+            "reglement": "922813007963254825",
+            "test": "922942569934098532"
         },
         "roles": {
             "boost": "847565593615007785",
