feat: :zap: Ajout d'un meilleur système de log & debug !

--- a/Utils/Data/config.json
+++ b/Utils/Data/config.json
@@ -9,7 +9,9 @@
             "starboard": "922545697113407518",
             "welcome": "834780676166516836",
             "reglement": "922813007963254825",
-            "test": "922942569934098532"
+            "test": "922942569934098532",
+            "errorLogs": "972462283538186310",
+            "successLogs": "972462283538186310"
         },
         "roles": {
             "boost": "847565593615007785",
