feat: :sparkles: Ajout du rôlee de notifications streams !

--- a/Utils/Data/config.json
+++ b/Utils/Data/config.json
@@ -31,6 +31,7 @@
             "graphists": "952900970864599100",
 
             "partenairesNotifs": "859031598590459924",
+            "streamsNotifs": "975818633949360148",
             "giveawaysNotifs": "922505653837242388",
             "serverNotifs": "922505944972263474",
             "announcementsNotifs": "849313732785733732",
