refactor: :zap: Quelques finitions pour faire plus joli :3

--- a/Utils/Data/config.json
+++ b/Utils/Data/config.json
@@ -1,6 +1,7 @@
 {
     "IDs": {
         "channels": {
+            "announcements": "825768407697326140",
             "requests": "922813260644896889",
             "sanctions": "963192211879653376",
             "reports": "931252719698726973",
