--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "@discordjs/builders": "^0.9.0",
     "@discordjs/rest": "^0.1.0-canary.0",
+    "canvacord": "^5.3.0",
     "canvas": "^2.8.0",
     "discord-api-types": "^0.25.2",
     "discord.js": "^13.3.1",
