feat: :sparkles: Ajout de la seconde partie du système de niveaux !

--- a/Utils/Data/config.json
+++ b/Utils/Data/config.json
@@ -36,7 +36,33 @@
             "giveawaysNotifs": "922505653837242388",
             "serverNotifs": "922505944972263474",
             "announcementsNotifs": "849313732785733732",
-            "pollsNotifs": "922505401981861898"
+            "pollsNotifs": "922505401981861898",
+
+            "levels":  {
+                "10": "979108443971534858",
+                "20": "979108793063448676",
+                "30": "979109052338556989",
+                "40": "979109160874573875",
+                "50": "979109431285526598",
+                "60": "979109580770537502",
+                "70": "979109749800968242",
+                "80": "979110020916600923",
+                "90": "979110166047883334",
+                "100":"979110228362670160"
+            },
+
+            "allLevels": [
+                "979108443971534858",
+                "979108793063448676",
+                "979109052338556989",
+                "979109160874573875",
+                "979109431285526598",
+                "979109580770537502",
+                "979109749800968242",
+                "979110020916600923",
+                "979110166047883334",
+                "979110228362670160"
+            ]
         },
         "guild": "825760704241991752",
         "categories": {
