feat: :sparkles: Ajout d'un message lors du bump du serveur !

--- a/Utils/Data/config.json
+++ b/Utils/Data/config.json
@@ -20,6 +20,7 @@
                 "952886013229928448",
                 "833828520030633984"
             ],
+            "general": "834780676166516836",
             "giveaways": "979485955394240583",
             "partnerships": "962361895954813049"
         },
@@ -46,7 +47,6 @@
             "partenairesNotifs": "859031598590459924",
             "streamsNotifs": "975818633949360148",
             "giveawaysNotifs": "922505653837242388",
-            "serverNotifs": "922505944972263474",
             "announcementsNotifs": "849313732785733732",
             "pollsNotifs": "922505401981861898",
 
