refactor: :recycle: Modification du système d'ajout des rôles développeurs et graphistes.

--- a/Utils/Data/config.json
+++ b/Utils/Data/config.json
@@ -40,7 +40,7 @@
             "javascript": "922229136892780565",
             "backend": "922230043005030421",
             "frontend": "922229734476234753",
-            "graphists": "952900970864599100",
+            "graphistes": "952900970864599100",
 
             "partnershipTicket": "979753146874216488",
 
