refactor: :recycle: Changement des IDs des salons.

--- a/Utils/Data/config.json
+++ b/Utils/Data/config.json
@@ -1,88 +1,88 @@
 {
     "IDs": {
         "channels": {
-            "announcements": "825768407697326140",
-            "requests": "922813260644896889",
-            "sanctions": "963192211879653376",
-            "reports": "931252719698726973",
-            "polls": "969981716456407120",
-            "suggests": "925757934972047360",
-            "starboard": "922545697113407518",
-            "welcome": "834780676166516836",
-            "reglement": "922813007963254825",
-            "rules": "825765662923423754",
-            "logs": "979458951605272579",
-            "test": "979470076195537007",
-            "errorLogs": "972462283538186310",
-            "successLogs": "972462283538186310",
-            "verifChannel": "979458924711399544",
+            "announcements": "988390454435385394",
+            "requests": "988175062223953989",
+            "sanctions": "988175061796130882",
+            "reports": "988175061607415852",
+            "polls": "988175061796130879",
+            "suggests": "988175062010048553",
+            "starboard": "988175061796130881",
+            "welcome": "988175062010048559",
+            "reglement": "988175062223953987",
+            "rules": "988175061796130878",
+            "logs": "988175061607415856",
+            "test": "988175061607415854",
+            "errorLogs": "988175061607415855",
+            "successLogs": "988175061607415855",
+            "verifChannel": "988175061607415853",
             "pubChannels": [
-                "952886013229928448",
-                "833828520030633984"
+                "988175062374973559",
+                "988175062374973558"
             ],
-            "general": "834780676166516836",
-            "giveaways": "979485955394240583",
-            "partnerships": "962361895954813049"
+            "general": "988175062010048559",
+            "giveaways": "988175061796130880",
+            "partnerships": "988390175413514340"
         },
 
         "roles": {
-            "boost": "847565593615007785",
-            "devs": "922223564835414096",
-            "mods": "825764023504470047", 
-            "admins": "825764558093156372",
-            "users": "825861210619641916",
+            "boost": "",
+            "devs": "988175061099900988",
+            "mods": "988175061116649473", 
+            "admins": "988175061116649474",
+            "users": "988175061099900986",
 
-            "others": "922230212069064725",
-            "csharp": "952899567404343326",
-            "c": "922229433056780348",
-            "java": "922229560131588136",
-            "python": "922229302475501569",
-            "javascript": "922229136892780565",
-            "backend": "922230043005030421",
-            "frontend": "922229734476234753",
-            "graphistes": "952900970864599100",
+            "others": "988175061087301700",
+            "csharp": "988175061087301701",
+            "c": "988175061099900980",
+            "java": "988175061099900981",
+            "python": "988175061099900982",
+            "javascript": "988175061099900983",
+            "backend": "988175061099900984",
+            "frontend": "988175061099900985",
+            "graphistes": "988175061099900987",
 
-            "partnershipTicket": "979753146874216488",
+            "partnershipTicket": "988175061087301699",
 
-            "partenairesNotifs": "859031598590459924",
-            "streamsNotifs": "975818633949360148",
-            "giveawaysNotifs": "922505653837242388",
-            "announcementsNotifs": "849313732785733732",
-            "pollsNotifs": "922505401981861898",
+            "partenairesNotifs": "988175061074710589",
+            "streamsNotifs": "988175061074710591",
+            "giveawaysNotifs": "988175061074710592",
+            "announcementsNotifs": "988175061074710594",
+            "pollsNotifs": "988175061074710590",
 
             "levels": [
-                "979108443971534858",
-                "979108793063448676",
-                "979109052338556989",
-                "979109160874573875",
-                "979109431285526598",
-                "979109580770537502",
-                "979109749800968242",
-                "979110020916600923",
-                "979110166047883334",
-                "979110228362670160"
+                "988175061074710595",
+                "988175061074710596",
+                "988175061074710597",
+                "988175061087301692",
+                "988175061087301693",
+                "988175061087301694",
+                "988175061087301695",
+                "988175061087301696",
+                "988175061087301697",
+                "988175061087301698"
             ],
 
             "levelsAdvantages": [
-                "Félicitations ! Tu peux désormais envoyer des message dans le salon <#833828520030633984> et te présenter à tout le monde !",
-                "Félicitations ! Tu peux désormais envoyer des message dans le salon <#952886013229928448> et booster tes projets !",
-                "Félicitations ! Ton **vote compte double** pour les <#925757934972047360> et <#969981716456407120> ! Influes sur l'avenir du serveur !",
+                "Félicitations ! Tu peux désormais envoyer des message dans le salon <#988175062374973558> et te présenter à tout le monde !",
+                "Félicitations ! Tu peux désormais envoyer des message dans le salon <#988175062374973559> et booster tes projets !",
+                "Félicitations ! Ton **vote compte double** pour les <#988175061796130879> et <#988175062010048553> ! Influes sur l'avenir du serveur !",
                 "Bien joué ! Pour te récompenser, je te donnes **accès à la commande `/embed`** pour que tu puisses encore mieux profiter du pouvoir de la parole !",
-                "🎉 Sabrez le champagne ! Pour fêter cette demi-centaine, nous t'offrons le droit d'envoyer **une pub dans <#962361895954813049>** !",
-                "Incroyable ! Il faut qu'on te remarque encore plus ! Dans ce cas tu n'as plus **besoin que de 3 ⭐ afin de rentrer dans le <#922545697113407518>** !",
-                "Nom d'une pipe en bois ! J'ai compris le message... Je vais faire en sorte que **tes suggestions mentionnent le rôle <@&922505401981861898>** !",
+                "🎉 Sabrez le champagne ! Pour fêter cette demi-centaine, nous t'offrons le droit d'envoyer **une pub dans <#988390175413514340>** !",
+                "Incroyable ! Il faut qu'on te remarque encore plus ! Dans ce cas tu n'as plus **besoin que de 3 ⭐ afin de rentrer dans le <#988175061796130881>** !",
+                "Nom d'une pipe en bois ! J'ai compris le message... Je vais faire en sorte que **tes suggestions mentionnent le rôle <@&988175061074710590>** !",
                 "Digne de Socrate ! Allez **un salon personnel pendant 1 semaine** ! C'est pour toi !",
-                "Sublime ! Pour la peine, **ta participation compte double pour les giveaways !** Tu as une chance en plus de gagner !",
+                "Sublime ! Pour la peine, **ta participation compte double pour les <#988175061796130880> !** Tu as une chance en plus de gagner !",
                 "🎉 Quelle classe ! Que de panache ! Votre altesse, je ne peux que m'incliner devant tant de prestance ! Voici un **salon personnel d'une durée d'un mois** pour vous !"
             ]
         },
 
-        "guild": "825760704241991752",
+        "guild": "988175061074710588",
         
         "categories": {
-            "requests": "833827745174781962",
-            "tickets": "932262095859380234",
-            "personalChannels": "979781819367063552"
+            "requests": "988389166582755358",
+            "tickets": "988389166582755358",
+            "personalChannels": "988175061796130884"
         }
     },
     
