refactor: :recycle: Modification de l'ID du rôle Booster.

--- a/Utils/Data/config.json
+++ b/Utils/Data/config.json
@@ -26,7 +26,7 @@
         },
 
         "roles": {
-            "boost": "",
+            "boost": "988453741172781088",
             "devs": "988175061099900988",
             "mods": "988175061116649473", 
             "admins": "988175061116649474",
