refactor: :recycle: Ajout d'une nouvelle façon de souhaiter la bienvenue !

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
-TOKEN=xxx sans les ""
-CLIENTID=ID du client sans les ""
-GUILDID=ID de votre guild sans les "" 
+Token=xxx sans les ""
+ClientID=ID du client sans les ""
+GuildID=ID de votre guild sans les "" 
+WelcomeWebhook=URL du WebHook sans les ""
