--- a/Utils/Data/config.json
+++ b/Utils/Data/config.json
@@ -11,6 +11,7 @@
             "welcome": "988175062010048559",
             "reglement": "988175062223953987",
             "rules": "988175061796130878",
+            "autoroles": "988175062010048554",
             "logs": "988175061607415856",
             "test": "988175061607415854",
             "errorLogs": "988175061607415855",
