feat: :sparkles: AJout du système de Join To Create !

--- a/Utils/Data/config.json
+++ b/Utils/Data/config.json
@@ -23,7 +23,8 @@
             ],
             "general": "988175062010048559",
             "giveaways": "988175061796130880",
-            "partnerships": "988390175413514340"
+            "partnerships": "988390175413514340",
+            "joinToCreate": "993827991404679238"
         },
 
         "roles": {
@@ -81,6 +82,7 @@
         "guild": "988175061074710588",
         
         "categories": {
+            "general": "988175062010048558",
             "requests": "988389166582755358",
             "tickets": "988389166582755358",
             "personalChannels": "988175061796130884"
